fix: update plugin id to match repository name

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "id": "selection-to-file",
+  "id": "markdown-to-plain-text",
   "name": "Markdown to Plain Text",
   "version": "0.0.1",
   "minAppVersion": "0.15.0",
